fix(TASK-9): added scrollbars

--- a/apps/table/src/styles.scss
+++ b/apps/table/src/styles.scss
@@ -45,3 +45,22 @@ a {
 #root {
   height: 100%;
 }
+
+* {
+  &::-webkit-scrollbar-track {
+    background-color: unset /* Цвет скролла */;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: lightgrey;
+  }
+
+  &::-webkit-scrollbar {
+    width: 8px; /* Толщина скролла */;
+    height: 8px;
+  }
+
+  &::-webkit-scrollbar-corner {
+    background-color: white;
+  }
+}
